--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 rouille = "3.2.1"
 serde = { version = "1.0.129", features = ["derive"] }
 serde_json = "1.0.66"
+clap = "2.33.3"
+dialoguer = "0.8.0"
