--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ serde = { version = "1.0.129", features = ["derive"] }
 serde_json = "1.0.66"
 clap = "2.33.3"
 dialoguer = "0.8.0"
+ureq = { version = "2.2.0", features = ["json"] }
+rusqlite = "0.26.0"
